# hicma-x

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASE.md  TESTS.md  TODOs
.github/workflows/: ci.yml
cmake_modules/: HICMAParsecConfig.cmake.in
docker/: Dockerfile.gene  Dockerfile.generate
scripts/: Checking_resultssynthatic.py  build_hicma_with_lapack.sh  build_release.sh  checknan.py  concat_phenotype.py  generate_bin.py  generate_bin2.py  generate_gene.py  generate_gene2.py  generate_gene_distributed.py  install_alps.sh  install_ecrc.sh  install_exageostat_intel.sh  install_exageostat_saturn.sh  install_frontier.sh  install_frontier_old.sh  install_fugaku.sh  install_icl.sh  install_icl_debug.sh  install_intel_cpu_instruction.txt  install_leonardo.sh  install_leonardo_no_gsl.sh  install_polaris.sh  install_saturn.sh  install_shaheen.sh  install_shaheen_intel.sh  install_shaheen_slurm.sh  install_summit.sh  install_summit_gcc.sh  install_tacc.sh  memory_compute.py  modules_ecrc.sh  modules_ibex.sh  modules_ibex_ra_mpi_dash.sh  modules_ibex_ra_nompi.sh  sed_change.sh  shaheen_modules.sh  task_compute.py  test_CI.sh  test_build.sh  (+7 more)
scripts/eos/: bind_eos.sh  run_syrk_template.sh  scaling_syrk.sh
src/: CMakeLists.txt
src/climate_emulator/: climate_emulator.c  climate_emulator.h  climate_emulator_diff_double.jdf  climate_emulator_geqsht_forward_pre_computed_version.jdf  climate_emulator_geqsht_forward_reshape.jdf  climate_emulator_geqsht_inverse_pre_computed_version.jdf  climate_emulator_gpu.c  climate_emulator_matrix_norm_get.jdf  climate_emulator_mse.jdf  climate_emulator_print_double.jdf  climate_emulator_read_csv_complex.jdf  climate_emulator_read_csv_double.jdf  climate_emulator_read_csv_double2complex.jdf  climate_emulator_read_csv_double2complex_timeslot.jdf  climate_emulator_read_csv_double_timeslot.jdf  climate_emulator_read_write.c
src/core/: hamming.jl  hamming_distance.cu  hicma_parsec.c  hicma_parsec.cpp  hicma_parsec.cu  hicma_parsec.h  hicma_parsec_check.c  hicma_parsec_check.h  hicma_parsec_core.c  hicma_parsec_core.h  hicma_parsec_datatype_convert.c  hicma_parsec_datatype_convert.h  hicma_parsec_decision.c  hicma_parsec_decision.h  hicma_parsec_distribution.c  hicma_parsec_distribution.h  hicma_parsec_flat_file.c  hicma_parsec_flat_file.h  hicma_parsec_gpu.c  hicma_parsec_gpu.h  hicma_parsec_hip.cu  hicma_parsec_hip_cuda.h  hicma_parsec_internal.c  hicma_parsec_internal.h  hicma_parsec_io.c  hicma_parsec_io.h  hicma_parsec_rank_statistics.c  hicma_parsec_rank_statistics.h  hicma_parsec_sparse_analysis.c  hicma_parsec_sparse_analysis.h
src/core/fortran_files/: dgeqrf.f  dgesdd.f  dorgqr.f
src/kernels/: Lapack_to_Tile.jdf  Lapack_to_Tile_Single.jdf  Lapack_to_Tile_sym.jdf  Tile_to_Lapack.jdf  Tile_to_Lapack_int.jdf  Tile_to_Lapack_int8.jdf  Tile_to_Lapack_single.jdf  Tile_to_Lapack_sym.jdf  Tile_to_Lapack_sym_single.jdf  band_free_memory.jdf  band_regenerate.jdf  band_size_dense_auto_tuning.jdf  cast_double_diag.jdf  check_read_data.jdf  convert_d2i.jdf  convert_d2s.jdf  convert_i2d.jdf  convert_i2s.jdf  convert_s2d.jdf  convert_s2i.jdf  copy2double.jdf  copy_vector_bcdd.jdf  datatype_convert_dense_static.jdf  decision_count.jdf  decision_make_comp.jdf  decision_make_send.jdf  diagonal_correction_calculation.jdf  dist_allocate.jdf  dist_allocate_hamming.jdf  dist_allocate_sym.jdf  dist_read.jdf  gemm_TN.jdf  gemm_TN_batched.jdf  gemm_TN_summa.jdf  gemm_f16_wrapper.c  gemm_wrapper.c  gemmex_TN.jdf  gemmex_TN_summa.jdf  gemmex_wrapper.c  genotype_generator.jdf  (+46 more)
tests/: CMakeLists.txt  testing_2gpu_gemm.cpp  testing_KRR.c  testing_KRR_file.c  testing_Kmatrix.c  testing_climate_emulator.c  testing_dgemm.c  testing_dgemm.cu  testing_dgemm_hip.cu  testing_dgemm_tlr.c  testing_dgemv.cu  testing_dist_read.c  testing_gemm_gpu.cu  testing_gemm_gpu_dp.cu  testing_gemm_gpu_hip.cu  testing_gemm_gpu_hip_dp.cu  testing_gpu_bandwidth.cpp  testing_hamming.c  testing_hgemm.c  testing_igemm_summa.c  testing_potrf.c  testing_syrk.c
